tests/NormalTests/paczka1/fuzzy1/98552904.err
Error in line 2: 7sH1 S307 0,4
Error in line 5: l938c S307 26,16
Error in line 7: pmgn?m S307 11,5
Error in line 12: A444 A457 359,88
Error in line 9: A444 A457 80,5
Error in line 29: pmgnwm A457 50,2
Error in line 26: l938c S307 30,8
Error in line 35: A444 S307 408,39
Error in line 30: pmgnwm A804 99,8
